--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,7 @@
 
 		<footer>
 			<a href="https://github.com/gx-gamescrack/GX-GamesCrack.github.io">Source</a>
-			<a href="https://discord.gg/KddjwqdRK">Discord</a>
+			<a href="https://discord.gg/QyvUQCNw2Y">Discord</a>
 			<a href="/suggest.html">Suggestions & Bugs</a>
 			<a href="/contact.html">Contact</a>
 			<a href="/support.html">Donate</a>
@@ -107,4 +107,5 @@
 		</script>
 	</body>
 </html>
+
 
