--- a/loader.html
+++ b/loader.html
@@ -67,7 +67,7 @@
 		</main>
 		<footer class="noscroll">
 			<a href="https://github.com/gx-gamescrack/GX-GamesCrack.github.io">Source</a>
-			<a href="https://discord.gg/KddjwqdRK">Discord</a>
+			<a href="https://discord.gg/QyvUQCNw2Y">Discord</a>
 			<a href="/suggest.html">Suggestions & Bugs</a>
 			<a href="/contact.html">Contact</a>
 			<a href="/support.html">Donate</a>
@@ -75,3 +75,4 @@
 		</footer>
 	</body>
 </html>
+
