--- a/bookmarklets.html
+++ b/bookmarklets.html
@@ -120,7 +120,7 @@
 
 		<footer>
 			<a href="https://github.com/gx-gamescrack/GX-GamesCrack.github.io">Source</a>
-			<a href="https://discord.gg/7jyufnwJNf">Discord</a>
+			<a href="https://discord.gg/QyvUQCNw2Y">Discord</a>
 			<a href="/suggest.html">Suggestions & Bugs</a>
 			<a href="/contact.html">Contact</a>
 			<a href="/support.html">Donate</a>
@@ -128,4 +128,5 @@
 		</footer>
 	</body>
 </html>
+
 
