--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 
 		<footer>
 			<a href="https://github.com/gx-gamescrack/gx-gamescrack.github.io">Source</a>
-			<a href="https://discord.com/invite/KddjwqdRK">Discord</a>
+			<a href="https://discord.gg/QyvUQCNw2Y">Discord</a>
 			<a href="/suggest.html">Suggestions & Bugs</a>
 			<a href="/contact.html">Contact</a>
 			<a href="/support.html">Donate</a>
@@ -75,4 +75,5 @@
 		</footer>
 	</body>
 </html>
+
 
