--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <header>
         <nav>
             <div class="logo" onclick="navigateTo('home')">
-                <img src="imgs/rice.png" alt="Rice Bowl" class="logo-rice">
+                <img src="img/rice.png" alt="Rice Bowl" class="logo-rice">
                 <span>RICE BOWL GAMEING</span>
             </div>
             <ul class="nav-links">
@@ -799,3 +799,4 @@
     </script>
 </body>
 </html>
+
